# Equipo-306

codigoProyecto/: CMakeLists.txt  fichusuario.txt
codigoProyecto/actividades/: actividades.cpp  actividades.h  main-actividades.cpp
codigoProyecto/src/: CMakeLists.txt
codigoProyecto/src/actividad/: CMakeLists.txt  actividad.cc  actividad.h
codigoProyecto/src/actividades/: CMakeLists.txt  actividades-main.cc  actividades.cc  actividades.h
codigoProyecto/src/menu/: CMakeLists.txt  menu-main.cc
codigoProyecto/src/persona/: CMakeLists.txt  persona.cc  persona.h
codigoProyecto/src/usuarios/: CMakeLists.txt  fichusuario.txt  usuarios.cc  usuarios.h
